# tutorial_event-handling

./: CMakeLists.txt  README.md
app/scripts/: app_event-handling.xml
smoke-test/: CMakeLists.txt  pre-test.sh  test.cpp  test.sh  test.xml
smoke-test/fixtures/: fixture.xml
src/: event-handling.cpp  event-handling.h  event-handling.h.autosave
